Apply suggestions from code review
Co-authored-by: Dominik Gedon <dev@gedon.org>

--- a/modules/administration/pages/image-management.adoc
+++ b/modules/administration/pages/image-management.adoc
@@ -65,11 +65,11 @@ This section guides you through the initial configuration for a build host.
 ====
 The operating system on the build host must match the operating system on the targeted image.
 
-For example, build {sles}{nbsp}15 based images on a build host running  {sles}{nbsp}15 (SP2 or later) OS version.
+For example, build {sles}{nbsp}15 based images on a build host running {sles}{nbsp}15 (SP2 or later) OS version.
 Build {sles}{nbsp}12 based images on a build host running {sles}{nbsp}12 SP4 or {sles}{nbsp}12 SP3 OS version.
 
 Cross-architecture builds are not possible.
-For example, you must build Raspberry PI {sles}{nbsp}15 SP3 image on a Raspberry PI (aarch64 architecture) build host running {sles}{nbsp}15 SP3.
+For example, you must build Raspberry Pi {sles}{nbsp}15 SP3 images on a Raspberry Pi (aarch64 architecture) build host running {sles}{nbsp}15 SP3.
 ====
 
 From the {productname} {webui}, perform these steps to configure a build host:
