at least for now, ARM is unsupported

--- a/modules/administration/pages/image-management.adoc
+++ b/modules/administration/pages/image-management.adoc
@@ -69,7 +69,10 @@ For example, build {sles}{nbsp}15 based images on a build host running {sles}{nb
 Build {sles}{nbsp}12 based images on a build host running {sles}{nbsp}12 SP4 or {sles}{nbsp}12 SP3 OS version.
 
 Cross-architecture builds are not possible.
+////
+2022-05-12, ke: at least for now, according to feedback, this is unsupported:
 For example, you must build Raspberry Pi {sles}{nbsp}15 SP3 images on a Raspberry Pi (aarch64 architecture) build host running {sles}{nbsp}15 SP3.
+////
 ====
 
 From the {productname} {webui}, perform these steps to configure a build host:
