--- a/modules/common-workflows/pages/workflow-inplace-sles-upgrade.adoc
+++ b/modules/common-workflows/pages/workflow-inplace-sles-upgrade.adoc
@@ -2,7 +2,7 @@
 
 = In-place Upgrade of {sles} with {productname}
 
-This workflow shows how to can implement an automated way to complete the task of in-place {sles} instances upgrade using {productname} Server.
+This workflow shows how to implement an automated way to complete the task of in-place {sles} instances upgrade using {productname} Server.
 
 The workflow is applicable for both {salt} and {trad} clients.
 
@@ -21,8 +21,9 @@ Successful completion of this workflow results in consistent, supportable outcom
 
 == Step-by-step preparation instructions
 
-. Prepare the {productname} Server for Provisioning
+.Procedure: Prepare the {productname} Server for Provisioning
 [role=procedure]
+
 . Create a SUSE Manager Content Lifecycle Management project for your distribution. 
   Carefully choose a short-but-descriptive prefix in the name, including all source channel modules.  
   Add Filters as needed
@@ -39,19 +40,19 @@ image::wf-inplaceMigration-02.png[scaledwidth=80%]
   Create a mount point for it, such as [path]``/opt/install/15sp3`` and mount the ISO there.  
   Ensure this path gets re-mounted at boot time. 
 . Create an Autoinstallation Distribution in {productname} for each base channel to which you will migrate.  
-  In the [guimenu]``Distribution``, reference the specific Base Channel to match the base to which you might migrate, for example the base channel of your CLM project Environment Lifecycle.  
-  Label [guimenu]``the Distribution`` something that references your specific Base Channel.  
-  Set the [literal]``Installer Generation`` to match your specific version of {sles} (12,15,etc).
-  The kernel options will be automatically populated when you click on [guimenu]``Create Autoinstallable Distribution``.  
+.. In the [guimenu]``Distribution``, reference the specific Base Channel to match the base to which you might migrate, for example the base channel of your CLM project Environment Lifecycle.  
+.. Label [guimenu]``the Distribution`` something that references your specific Base Channel.  
+.. Set the [literal]``Installer Generation`` to match your specific version of {sles} (12,15,etc).
+.. The kernel options will be automatically populated when you click on [guimenu]``Create Autoinstallable Distribution``.  
 . You may create more [guimenu]``Distributions`` depending on the Base Channel you need to assign, and you can re-use the same [literal]``Tree Path`` for the boot media if required.
 +
 image::wf-inplaceMigration-03.png[scaledwidth=80%]
 +
 . Click on [guimenu]``Profiles``, and upload Kickstart/Autoyast File for each target SLES distribution, service pack and channels you wish to migrate to.  
-  This profile will be associated with the activation key and autoinstallation distribution created above. 
-  Cut-and-paste a [literal]``Profile`` template as the basis for what you upload, assign it the [literal]``Autoinstall tree`` you created as a [literal]``Distribution`` above.  
-  Do not put anything in the [literal]``Virtualizaton Type`` box, and select [btn]``Create``.
-. Once created, your profile will now have some new fields on this [guimenu``Details`` page.  
+.. This profile will be associated with the activation key and autoinstallation distribution created above. 
+.. Cut-and-paste a [literal]``Profile`` template as the basis for what you upload, assign it the [literal]``Autoinstall tree`` you created as a [literal]``Distribution`` above.  
+.. Do not put anything in the [literal]``Virtualizaton Type`` box, and select [btn]``Create``.
+. Once created, your profile will now have some new fields on this [guimenui]``Details`` page.  
   In the [literal]``Kernel Options`` line on this [literal]``Details`` page, put in
 +
 ----
@@ -77,7 +78,7 @@ Sample Variables:
 Edit the Autoyast profile itself in a tool where you can use cut-and-paste for the channels in your profile.  
 Use variables in your profiles where possible.  
 
-Much time has gone into creating some useful Profiles which should be used as a starting point. 
+Much time has gone into creating some useful profiles which can be used as a starting point. 
 
 [NOTE] 
 ====
@@ -85,9 +86,10 @@ Due to the size of these files, they are not included in the documentation.
 Please contact support team if you need the example profile files.
 ====
 
-The profile follows autoyast xml guidelines, and for an in-place upgrade there are several important sections:
+The profiles follow autoyast xml guidelines, and for an in-place upgrade there are several important sections:
 
-=== Add-ons - the repositories used in the upgrade
+//=== Add-ons - the repositories used in the upgrade
+Add-ons - the repositories used in the upgrade::
 
 ----
 <listentry>
