--- a/modules/common-workflows/pages/workflow-inplace-sles-upgrade.adoc
+++ b/modules/common-workflows/pages/workflow-inplace-sles-upgrade.adoc
@@ -1,6 +1,6 @@
 [[workflow-inplace-sles-upgrade]]
 
-= In-place Upgrade of {sles} with {productname}
+= In-place upgrade of {sles} with {productname}
 
 This workflow shows how to implement an automated way to complete the task of in-place {sles} instances upgrade using {productname} Server.
 
