--- a/modules/common-workflows/pages/workflow-inplace-sles-upgrade.adoc
+++ b/modules/common-workflows/pages/workflow-inplace-sles-upgrade.adoc
@@ -2,7 +2,7 @@
 
 = In-place upgrade of {sles} with {productname}
 
-This workflow shows how to implement an automated way to complete the task of in-place {sles} instances upgrade using {productname} Server.
+This workflow shows how to automatically complete the task of in-place {sles} instances upgrade with {productname} Server.
 
 The workflow is applicable for both {salt} and {trad} clients.
 
