--- a/modules/common-workflows/pages/workflow-inplace-sles-upgrade.adoc
+++ b/modules/common-workflows/pages/workflow-inplace-sles-upgrade.adoc
@@ -24,7 +24,7 @@ Successful completion of this workflow results in consistent, supportable outcom
 
 [WARNING]
 ====
-This workflow is very complex and time-consuming.
+This workflow is complex and time-consuming.
 Make sure that adequate testing is done before deploying the procedure in live environment.
 ====
 
