--- a/modules/common-workflows/pages/workflow-inplace-sles-upgrade.adoc
+++ b/modules/common-workflows/pages/workflow-inplace-sles-upgrade.adoc
@@ -31,7 +31,7 @@ Make sure that adequate testing is done before deploying the procedure in live e
 .Procedure: Prepare the {productname} Server for Provisioning
 [role=procedure]
 . Create a SUSE Manager Content Lifecycle Management project for your distribution. 
-  Carefully choose a short-but-descriptive prefix in the name, including all source channel modules.  
+  Choose a short-but-descriptive prefix in the name, including all source channel modules.  
   Add Filters as needed
   Add at least one Environment.
 +
