--- a/modules/common-workflows/pages/workflow-inplace-sles-upgrade.adoc
+++ b/modules/common-workflows/pages/workflow-inplace-sles-upgrade.adoc
@@ -32,7 +32,7 @@ Make sure that adequate testing is done before deploying the procedure in live e
 [role=procedure]
 . Create a SUSE Manager Content Lifecycle Management project for your distribution. 
   Choose a short-but-descriptive prefix in the name, including all source channel modules.  
-  Add Filters as needed
+  Add Filters as needed.
   Add at least one Environment.
 +
 image::wf-inplaceMigration-01.png[scaledwidth=80%]
