--- a/modules/common-workflows/pages/workflow-inplace-sles-upgrade.adoc
+++ b/modules/common-workflows/pages/workflow-inplace-sles-upgrade.adoc
@@ -37,7 +37,7 @@ Make sure that adequate testing is done before deploying the procedure in live e
 +
 image::wf-inplaceMigration-01.png[scaledwidth=80%]
 +
-. Create an Activation Key that includes the filtered project channels
+. Create an Activation Key that includes the filtered project channels.
 +
 image::wf-inplaceMigration-02.png[scaledwidth=80%]
 +
