--- a/modules/common-workflows/pages/workflow-inplace-sles-upgrade.adoc
+++ b/modules/common-workflows/pages/workflow-inplace-sles-upgrade.adoc
@@ -119,7 +119,7 @@ For {salt} clients, go to <<in-place-migration-salt-minions>>.
 For {trad} clients, go to <<in-place-migration-traditional-clients>>. 
 
 [[in-place-migration-salt-minions]]
-== Migration of Salt minions
+== Migration of Salt clients
 
 Procedure: Migrating Salt minions
 [role=procedure]
