--- a/modules/common-workflows/pages/workflow-inplace-sles-upgrade.adoc
+++ b/modules/common-workflows/pages/workflow-inplace-sles-upgrade.adoc
@@ -121,7 +121,7 @@ For {trad} clients, go to <<in-place-migration-traditional-clients>>.
 [[in-place-migration-salt-minions]]
 == Migration of Salt clients
 
-Procedure: Migrating Salt minions
+Procedure: Migrating Salt clients
 [role=procedure]
 
 . Prior to migration, be sure to check [guimenu]``Software → Non-Compliant``.  
