--- a/modules/common-workflows/pages/workflow-inplace-sles-upgrade.adoc
+++ b/modules/common-workflows/pages/workflow-inplace-sles-upgrade.adoc
@@ -88,7 +88,7 @@ Much time has gone into creating some useful profiles which can be used as a sta
 
 [NOTE] 
 ====
-For profile files, go to https://github.com/SUSE/manager-build-profiles.
+For profile files, see https://github.com/SUSE/manager-build-profiles.
 ====
 
 The profiles follow Autoyast xml guidelines, and for an in-place upgrade there are several important sections:
