--- a/modules/common-workflows/pages/workflow-inplace-sles-upgrade.adoc
+++ b/modules/common-workflows/pages/workflow-inplace-sles-upgrade.adoc
@@ -146,7 +146,7 @@ image::wf-inplaceMigration-07.png[scaledwidth=80%]
 {productname} creates the proper entry in [path]``/etc/grub.d/`` for the reinstallation, and boots the selected systems to that entry.  
  The Profile you created above will be used to drive automated upgrade, following which your system will use the reactivation key (one time), associating the upgraded system with the previous {productname} profile.
 
-The Session Status screen in {productname} will not be updated real-time for {salt} minions.  
+The Session Status screen in {productname} will not be updated real-time for {salt} clients.
 Instead, watch the target system console to track progress.   
 If you are updating an instance on a hyperscaler like AWS you may be able to get screenshots of the console.
 
