--- a/modules/common-workflows/pages/workflow-inplace-sles-upgrade.adoc
+++ b/modules/common-workflows/pages/workflow-inplace-sles-upgrade.adoc
@@ -41,7 +41,8 @@ image::wf-inplaceMigration-01.png[scaledwidth=80%]
 +
 image::wf-inplaceMigration-02.png[scaledwidth=80%]
 +
-. (Optional) Create a bootstrap script - although the profile will not need it, since it is managed in the AutoYaST.
+. (Optional) Create a bootstrap script.
+  The profile will not need it, because it is managed in the {ay}.
 . Create a [path]``/var/spacewalk/iso`` directory, and for SLES 15 SP2 and following, copy the [literal]``Full iso`` (>10 GB) there.  
   Create a mount point for it, such as [path]``/opt/install/15sp3`` and mount the ISO there.  
   Ensure this path gets re-mounted at boot time. 
