--- a/modules/common-workflows/pages/workflow-inplace-sles-upgrade.adoc
+++ b/modules/common-workflows/pages/workflow-inplace-sles-upgrade.adoc
@@ -85,7 +85,7 @@ Sample Variables:
 Edit the Autoyast profile itself in a tool where you can use cut-and-paste for the channels in your profile.  
 Use variables in your profiles where possible.  
 
-Much time has gone into creating some useful profiles which can be used as a starting point. 
+Published profiles can be used as a starting point. 
 
 [NOTE] 
 ====
