--- a/modules/common-workflows/pages/workflow-inplace-sles-upgrade.adoc
+++ b/modules/common-workflows/pages/workflow-inplace-sles-upgrade.adoc
@@ -50,7 +50,7 @@ image::wf-inplaceMigration-02.png[scaledwidth=80%]
 .. In the [guimenu]``Distribution``, reference the specific Base Channel to match the base to which you might migrate, for example the base channel of your CLM project Environment Lifecycle.  
 .. Label [guimenu]``the Distribution`` something that references your specific Base Channel.  
 .. Set the [literal]``Installer Generation`` to match your specific version of {sles} (12, 15, etc.).
-.. The kernel options will be automatically populated when you click on [guimenu]``Create Autoinstallable Distribution``.  
+.. The kernel options will be automatically populated when you click [guimenu]``Create Autoinstallable Distribution``.  
 . You may create more [guimenu]``Distributions`` depending on the Base Channel you need to assign, and you can re-use the same [literal]``Tree Path`` for the boot media if required.
 +
 image::wf-inplaceMigration-03.png[scaledwidth=80%]
