--- a/modules/common-workflows/pages/workflow-inplace-sles-upgrade.adoc
+++ b/modules/common-workflows/pages/workflow-inplace-sles-upgrade.adoc
@@ -70,7 +70,7 @@ autoupgrade=1 insecure=1 useonlinerepo
 +
 image::wf-inplaceMigration-04.png[scaledwidth=80%]
 +
-. Click on the variables tab in your Autoinstallation Profile to specify CLM prefix, Activation Key, Distrotree, and Organization:
+. Click the variables tab in your Autoinstallation Profile to specify CLM prefix, Activation Key, Distribution tree, and Organization:
 +
 image::wf-inplaceMigration-05.png[scaledwidth=80%]
 +
