openSUSE Leap 15.4 for Server/Proxy, and add it as well as supported client

--- a/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
@@ -3,11 +3,16 @@
 
 [NOTE]
 ====
+ifeval::[{uyuni-content} == true]
+Only {opensuse} Leap 15.3 and newer are supported to be used as container host for {productname} Proxy containers.
+endif::[]
+ifeval::[{suma-content} == true]
 Only {sles} 15 SP3 and newer are supported to be used as container host for {productname} Proxy containers.
+endif::[]
 ====
 
 [[installation-proxy-containers-requirements]]
-== SLES Container Host Requirements
+== Container Host Requirements
 
 
 [cols="1,1,1", options="header"]
@@ -38,7 +43,7 @@ Only {sles} 15 SP3 and newer are supported to be used as container host for {pro
 
 
 [[installation-proxy-containers-services]]
-== Install Container Services on SLES system
+== Install Container Services on the host system
 
 [NOTE]
 ====
