--- a/modules/client-configuration/pages/clients-opensuseleap.adoc
+++ b/modules/client-configuration/pages/clients-opensuseleap.adoc
@@ -40,6 +40,9 @@ ifeval::[{suma-content} == true]
 | {opensuse} Leap 15.3
 | openSUSE Leap 15.3 x86_64
 
+| {opensuse} Leap 15.4
+| openSUSE Leap 15.4 x86_64
+
 |===
 
 include::snippets/addchannels_vendor_webui.adoc[]
@@ -56,6 +59,7 @@ The channels you need for this procedure are:
 | {opensuse} Leap 15.1 | opensuse-leap-15.1-pool
 | {opensuse} Leap 15.2 | opensuse-leap-15.2-pool
 | {opensuse} Leap 15.3 | opensuse-leap-15.3-pool
+| {opensuse} Leap 15.4 | opensuse-leap-15.4-pool
 
 |===
 
@@ -114,6 +118,15 @@ ifeval::[{uyuni-content} == true]
 | opensuse_leap15_2-non-oss-updatess
 | opensuse_leap15_3-backports-update
 | opensuse_leap15_3-sle-updates
+
+| {opensuse} Leap 15.4
+| opensuse_leap15_4
+| opensuse_leap15_4-uyuni-client
+| opensuse_leap15_4-updates
+| opensuse_leap15_4-non-oss
+| opensuse_leap15_4-non-oss-updatess
+| opensuse_leap15_4-backports-update
+| opensuse_leap15_4-sle-updates
 
 |===
 
