--- a/modules/common-workflows/pages/workflow-inplace-sles-upgrade.adoc
+++ b/modules/common-workflows/pages/workflow-inplace-sles-upgrade.adoc
@@ -55,7 +55,7 @@ image::wf-inplaceMigration-02.png[scaledwidth=80%]
 +
 image::wf-inplaceMigration-03.png[scaledwidth=80%]
 +
-. Click on [guimenu]``Profiles``, and upload Kickstart/Autoyast File for each target SLES distribution, service pack and channels you wish to migrate to.  
+. Click [guimenu]``Profiles``, and upload Kickstart/Autoyast File for each target SLES distribution, service pack, and channels you wish to migrate to.  
 .. This profile will be associated with the activation key and autoinstallation distribution created above. 
 .. Cut-and-paste a [literal]``Profile`` template as the basis for what you upload, assign it the [literal]``Autoinstall tree`` you created as a [literal]``Distribution`` above.  
 .. Do not put anything in the [literal]``Virtualizaton Type`` box, and click btn:[Create].
