--- a/modules/common-workflows/pages/workflow-inplace-sles-upgrade.adoc
+++ b/modules/common-workflows/pages/workflow-inplace-sles-upgrade.adoc
@@ -30,7 +30,7 @@ Make sure that adequate testing is done before deploying the procedure in live e
 
 .Procedure: Prepare the {productname} Server for Provisioning
 [role=procedure]
-. Create a SUSE Manager Content Lifecycle Management project for your distribution. 
+. Create a {productname} Content Lifecycle Management project for your distribution. 
   Carefully choose a short-but-descriptive prefix in the name, including all source channel modules.  
   Add Filters as needed
   Add at least one Environment.
@@ -42,7 +42,7 @@ image::wf-inplaceMigration-01.png[scaledwidth=80%]
 image::wf-inplaceMigration-02.png[scaledwidth=80%]
 +
 . (Optional) Create a bootstrap script - although the profile will not need it, since it is managed in the AutoYaST.
-. Create a [path]``/var/spacewalk/iso`` directory, and for SLES 15 SP2 and following, copy the [literal]``Full iso`` (>10 GB) there.  
+. Create a [path]``/var/spacewalk/iso`` directory, and for {sles} 15 SP2 and following, copy the [literal]``Full iso`` (>10 GB) there.  
   Create a mount point for it, such as [path]``/opt/install/15sp3`` and mount the ISO there.  
   Ensure this path gets re-mounted at boot time. 
 . Create an Autoinstallation Distribution in {productname} for each base channel to which you will migrate.  
@@ -54,7 +54,7 @@ image::wf-inplaceMigration-02.png[scaledwidth=80%]
 +
 image::wf-inplaceMigration-03.png[scaledwidth=80%]
 +
-. Click on [guimenu]``Profiles``, and upload Kickstart/Autoyast File for each target SLES distribution, service pack and channels you wish to migrate to.  
+. Click on [guimenu]``Profiles``, and upload Kickstart/Autoyast file for each target {sles} distribution, service pack and channels you wish to migrate to.  
 .. This profile will be associated with the activation key and autoinstallation distribution created above. 
 .. Cut-and-paste a [literal]``Profile`` template as the basis for what you upload, assign it the [literal]``Autoinstall tree`` you created as a [literal]``Distribution`` above.  
 .. Do not put anything in the [literal]``Virtualizaton Type`` box, and select [btn]``Create``.
@@ -81,7 +81,7 @@ Sample Variables:
 * [literal]``channel_prefix=15sp1-demo-test``
 * [literal]``distrotree=15sp1-demo-test``
 
-Edit the Autoyast profile itself in a tool where you can use cut-and-paste for the channels in your profile.  
+Edit the {ay} profile itself in a tool where you can use cut-and-paste for the channels in your profile.  
 Use variables in your profiles where possible.  
 
 Much time has gone into creating some useful profiles which can be used as a starting point. 
@@ -91,9 +91,8 @@ Much time has gone into creating some useful profiles which can be used as a sta
 For profile files, go to https://github.com/SUSE/manager-build-profiles.
 ====
 
-The profiles follow Autoyast xml guidelines, and for an in-place upgrade there are several important sections:
+The profiles follow {ay} XML guidelines, and for an in-place upgrade there are several important sections:
 
-//=== Add-ons - the repositories used in the upgrade
 Add-ons - the repositories used in the upgrade::
 
 ----
