--- a/modules/client-configuration/pages/client-upgrades-product-migration.adoc
+++ b/modules/client-configuration/pages/client-upgrades-product-migration.adoc
@@ -36,6 +36,10 @@ When the migration procedure has begun, rolling back is not possible.
 Ensure you have a working system backup available, in case of an emergency.
 ====
 
+
+
+== Perform a Migration
+
 Before starting the product migration, ensure there are no pending updates or patches.
 Check the [guimenu]``System Status`` on the client system's menu:Details[Overview] page, and install all offered updates or patches.
 If your client system is not uptodate, product migration may fail.
@@ -72,6 +76,26 @@ If you want to migrate a large number of clients to the next SP version, you can
 
 
 
+[WARNING]
+====
+The product mas migration operation is dangerous.
+Be careful not to upgrade systems unintentionally.
+The process should be tested thoroughly.
+At least, do a dry-run first.
+====
+
+The [command]``spacecmd`` commandline tool provides a [systemitem]``system_scheduleproductmigration`` sub command, which can be used to schedule a migration for a large number of clients to the next minor version.
+
+To see syntax usage and options for [systemitem]``system_scheduleproductmigration``, run:
+
+----
+spacecmd system_scheduleproductmigration help
+----
+
+
+
+=== Perform a Product Mass Migration
+
 .Procedure: Performing a Product Mass Migration
 . List available migration targets, and take note of the system IDs you want to migrate:
 +
@@ -99,4 +123,130 @@ for system in system_ids
   endif
 endfor
 ----
+
+
+
+
+=== Product Mass Migration Example: SLES 15 SP2 to SLES 15 SP3
+
+////
+Adjust the following draft text
+////
+
+For this example, a group will be created temporarily to facilitate the mass migration.
+
+.Procedure: Creating a Mass Product Migration Group
+
+. In the {productname} {webui}, navigate to menu:Systems[System Groups], and click btn:[Create Group].
+. Name the group [literal]``mpm-target-sles15sp3``.
+
+
+
+Only systems subscribed to the same base channel should be added to the created group.
+In the example, only systems subscribed to [literal]``SLE-Product-SLES15-SP2-Pool for x86_64`` were added to the group.
+
+[NOTE]
+====
+Any systems that you are not intending to upgrade at this time, should be removed from the group.
+====
+
+.Procedure: Adding Systems to the Group
+
+. For more information about adding clients to groups, see xref:client-configuration:system-groups.adoc#_add_clients_to_groups[].
+
+////
+Note or warning about taking normal precautions (backups, make sure fully patched, etc)
+////
+
+[IMPORTANT]
+====
+The [command]``spacecmd`` sub-commands [literal]``system_scheduleproductmigration`` abd [command]``system_listmigrationtargets`` are looping over all systems that are part of the group.
+If there are 100 systems in the group, you will see 100 actions scheduled.
+It is important that all systems in the group support the same "migration target".
++
+You will get the targets for all the systems in the group, when you run:
++
+----
+spacecmd -- system_listmigrationtargets group:mpm-target-sles15sp3
+----
++
+Only select a target, which is reported for *all* systems.
+This command output a string of"IDs".
+The string is the identifier for the [literal]``MIGRATIONTARGET`` of the other command.
+====
+
+
+
+.Procedure: Running the Mass Migration Command
+
+. For this example to upgrade all systems in the group [literal]``mpm-target-sles15sp3`` from SLES 12 SP2 to SLES 15 SP, enter on the command line:
++
+----
+spacecmd -- system_scheduleproductmigration group:mpm-target-sles15sp3 \
+    sle-product-sles15-sp3-pool-x86_64 [190,203,195,1242] -d
+----
+
+The syntax for the [command]``system_scheduleproductmigration`` command is as follows:
+----
+spacecmd -- system_scheduleproductmigration <SYSTEM> <BASE_CHANNEL_LABEL> \
+    <MIGRATION_TARGET> [options]
+----
+
+For more information, see [command]``spacecmd -- system_scheduleproductmigration help``.
+
+
+
+=== Mandatory Syntax
+
+<SYSTEM>::
+For this example we will use the group we created to select all of the systems from that group:
++
+----
+group:mpm-target-sles15sp3
+----
+
+<BASE_CHANNEL_LABEL>::
+This is the label for the target base channel.
+In this case, the system is being upgraded to SLES 15 SP3, and the label is [literal]``sle-product-sles15-sp3-pool-x86_64``.
++
+To see a list of all base channels currently mirrored, run:
++
+----
+spacecmd softwarechannel_listbasechannels.
+----
++
+Keep in mind you cannot upgrade to a channel unless it is an available target for your current base channel.
+
+<MIGRATION_TARGET>::
+To identify this value for systems in the group [literal]``group:mpm-target-sles15sp3``, run:
++
+----
+spacecmd -- system_listmigrationtargets group:mpm-target-sles15sp3
+----
++
+The [literal]``MIGRATION_TARGET`` parameter must be passed in the following format:
++
+----
+[190,203,195,1242]
+----
+
+Options::
++
+. -s START_TIME
+. -d pass this flag, if you want to do a dry run (it is recommended to run a dry run before the actual migration)
+. -c CHILD_CHANNELS (comma-separated child channels labels (with no spaces))
++
+In this case we included the "-d" option, which can be removed after a successful dry run.
+
+If successful, you will see the command output with the following for each scheduled system:
+
+. Scheduling Product migration for system mpm-sles152-1
+. Scheduled action ID: 66
+
+You can also track the action, in this case the dry run, in the {webui} for a given system in the group.
+From the system details page of the client, Navigate to menu:Events[History].
+If there are any failures during the dry run, the system should be investigated.
+
+If all is well, the "-d" option can be removed from the command to run the real migration.
+After the migration is complete, you can reboot the system from the {productname} {webui}.
 
