--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -181,11 +181,6 @@ ifeval::[{suma-content} == true]
 | {check}
 | {check}
 
-| {sle} 11
-| {x86}, {x86_64}, {ipf}, {ppc64}, {ibmz}
-| {check}
-| {check}
-
 | {sles} for SAP 15
 | {x86_64}, {ppc64le}
 | {check}
@@ -296,7 +291,7 @@ endif::[]
 
 [NOTE]
 ====
-{rhel} 6, {oracle} 6, CentOS 6, {sles}-ES 6, and {ubuntu} 16.04 are end-of-life upstream and no longer supported by {suse} as client operating systems.
+{sles} 11, {rhel} 6, {oracle} 6, CentOS 6, {sles}-ES 6, and {ubuntu} 16.04 are end-of-life upstream and no longer supported by {suse} as client operating systems.
 SUSE Manager Client Tools for these operating systems are still provided from SCC for convenience.
 ====
 
