add note about openscap security profile support

--- a/modules/administration/pages/openscap.adoc
+++ b/modules/administration/pages/openscap.adoc
@@ -63,6 +63,18 @@ RHEL 7 and compatible systems provide a [package]``scap-security-guide`` package
 You are advised to use the [package]``scap-security-guide-redhat`` package you will find in the {productname} Client Tools.
 
 
+[IMPORTANT]
+====
+SUSE provides `scap-security-guide` package for different openscap profiles. In the current version of `scap-security-guide`, SUSE supports the following profiles:
+
+- DISA STIG profile for SUSE Linux Enterprise Server 12 and 15
+- PCI-DSS profile for SUSE Linux Enterprise Server 12 and 15
+- HIPAA profile for SUSE Linux Enterprise Server 12 and 15
+
+Other profiles, like the CIS profile, are community supplied and not officially supported by SUSE.
+
+For Non-SUSE OSs, note that the included profiles are community supplied and not officially supported by SUSE.
+====
 
 == OpenSCAP Content Files
 
