--- a/modules/common-workflows/nav-common-workflows-guide.adoc
+++ b/modules/common-workflows/nav-common-workflows-guide.adoc
@@ -10,10 +10,11 @@ endif::[]
 
 
 * xref:common-workflows-overview.adoc[Common Workflows]
+** xref:workflow-client-onboarding.adoc[Client Onboarding]
 ** xref:workflow-configuration-management.adoc[Configuration Management]
 ** xref:workflow-content-lifecycle-management.adoc[Content Lifecycle Management]
 ** xref:workflow-inplace-sles-upgrade.adoc[In-place Upgrade of {sles} with {productname}]
-** xref:workflow-onboarding.adoc[Onboarding]
+//** xref:workflow-onboarding.adoc[Onboarding]
 
 // License
 ifdef::backend-pdf[]
