--- a/modules/administration/pages/openscap.adoc
+++ b/modules/administration/pages/openscap.adoc
@@ -65,15 +65,16 @@ You are advised to use the [package]``scap-security-guide-redhat`` package you w
 
 [IMPORTANT]
 ====
-SUSE provides `scap-security-guide` package for different openscap profiles. In the current version of `scap-security-guide`, SUSE supports the following profiles:
+{suse} provides the [package]``scap-security-guide`` package for different openscap profiles.
+In the current version of [package]``scap-security-guide``, {suse} supports the following profiles:
 
-- DISA STIG profile for SUSE Linux Enterprise Server 12 and 15
-- PCI-DSS profile for SUSE Linux Enterprise Server 12 and 15
-- HIPAA profile for SUSE Linux Enterprise Server 12 and 15
+* DISA STIG profile for {sles} 12 and 15
+* PCI-DSS profile for {sles} 12 and 15
+* HIPAA profile for {sles} 12 and 15
 
-Other profiles, like the CIS profile, are community supplied and not officially supported by SUSE.
+Other profiles, like the CIS profile, are community supplied and not officially supported by {suse}.
 
-For Non-SUSE OSs, note that the included profiles are community supplied and not officially supported by SUSE.
+For Non-{suse} OSs, note that the included profiles are community supplied and not officially supported by {suse}SUSE.
 ====
 
 == OpenSCAP Content Files
