Large deployments guide includes mention to proxy (bsc#1199577) (#1563)
Signed-off-by: Ricardo Mateus <rmateus@suse.com>

--- a/modules/large-deployments/pages/large-deployments-overview.adoc
+++ b/modules/large-deployments/pages/large-deployments-overview.adoc
@@ -21,8 +21,13 @@ There are two main ways to manage large scale deployments.
 You can manage them with a single {productname} Server, or you can use multiple servers in a hub.
 Both methods are described in this book.
 
+
 Additionally, if you are operating within a Retail environment, you can use {smr} to manage large deployments of point-of-service terminals.
 There is an introduction to {smr} in this book.
+
+With large scale environments one should also consider the usage of {productname} Proxies.
+Sizing and location of the Proxies will dependent on the deployment topology.
+For more information see xref:installation-and-upgrade:install-proxy.adoc[].
 
 Tuning and monitoring large scale deployments can differ from smaller installations.
 This book contains guidance for both tuning and monitoring within larger installations.
