Add containerized retail workflow

--- a/modules/retail/nav-retail-guide.adoc
+++ b/modules/retail/nav-retail-guide.adoc
@@ -9,9 +9,10 @@ endif::[]
 
 * xref:retail-overview.adoc[Retail Guide]
 ** xref:retail-components.adoc[Retail Components]
+** xref:retail-requirements.adoc[Retail Requirements]
+** xref:retail-network-arch.adoc[Network Architecture]
+// Installation
 ** xref:retail-install.adoc[Retail Installation]
-*** xref:retail-requirements.adoc[Retail Requirements]
-
 ifeval::[{suma-content} == true]
 *** xref:retail-install-unified.adoc[Install with the {unifiedinstaller}]
 endif::[]
@@ -21,8 +22,9 @@ ifeval::[{uyuni-content} == true]
 *** xref:retail-uyuni-server-setup.adoc[Uyuni Retail Server Setup]
 *** xref:retail-uyuni-branchserver.adoc[Uyuni Retail Branch Server]
 endif::[]
-*** xref:retail-network-arch.adoc[Network Architecture]
 *** xref:retail-install-setup.adoc[Set Up Retail Environment]
+*** xref:containerized-saltboot.adoc[Set Up Retail Environment using Containerized Proxy]
+// Terminal ops
 ** xref:retail-deploy-section.adoc[Deploying Terminals]
 *** xref:retail-deploy-terminals.adoc[Terminal Deployment Basics]
 *** xref:retail-deploy-terminals-other.adoc[USB and Wireless Deployments]
