--- a/modules/retail/pages/retail-install-setup.adoc
+++ b/modules/retail/pages/retail-install-setup.adoc
@@ -44,6 +44,11 @@ You can use Salt to install a system user after the terminal has been deployed.
 
 === SLES{nbsp}11 SP{nbsp}3 Terminals
 
+[WARNING]
+====
+SLES{nbsp}11 reached end of life and is no longer supported and can stop functioning at any moment.
+====
+
 POS Terminals based on {sles}{nbsp}11 SP{nbsp}3 can be deployed in much the same way as other terminals, with a few differences.
 
 * You must use the SLES{nbsp}11 template
