--- a/modules/retail/pages/retail-overview.adoc
+++ b/modules/retail/pages/retail-overview.adoc
@@ -8,7 +8,7 @@
 It uses the same technology as {productname}, but is customized to address the needs of retail organizations.
 
 {productname} {smr} is designed for use in retail situations where customers can use point-of-service terminals to purchase or exchange goods, take part in promotions, or collect loyalty points.
-In addition to retail installations, it can also be used for novel purposes, such as maintaining student computers in an educational environment, or self-service kiosks in banks or hospitals.
+In addition to retail installations, it can also be used for other purposes, such as maintaining student computers in an educational environment, or self-service kiosks in banks or hospitals.
 
 {productname} {smr} is intended for use in installations that include servers, workstations, point-of-service terminals, and other devices.
 It allows administrators to install, configure, and update the software on their servers, and manage the deployment and provisioning of point-of-service machines.
