--- a/modules/administration/pages/openscap.adoc
+++ b/modules/administration/pages/openscap.adoc
@@ -74,7 +74,7 @@ In the current version of [package]``scap-security-guide``, {suse} supports the 
 
 Other profiles, like the CIS profile, are community supplied and not officially supported by {suse}.
 
-For Non-{suse} OSs, note that the included profiles are community supplied and not officially supported by {suse}SUSE.
+For Non-{suse} OSs, note that the included profiles are community supplied and not officially supported by {suse}.
 ====
 
 == OpenSCAP Content Files
