Update public cloud client bootstrap

--- a/modules/client-configuration/pages/clients-pubcloud.adoc
+++ b/modules/client-configuration/pages/clients-pubcloud.adoc
@@ -3,7 +3,9 @@
 
 When you have your {productname} Server set up, you are ready to start registering clients.
 
+== Add Products And Sync Repositories
 
+Ensure you have already added the correponding products for your clients and xref:installation-and-upgrade:pubcloud-setup.adoc#add-product-sync-repo[synced the repositories] to {productname}. This is required to create the bootstrap repositories for bootstrapping the clients.
 
 == Prepare on-demand images
 
