--- a/modules/client-configuration/pages/clients-pubcloud.adoc
+++ b/modules/client-configuration/pages/clients-pubcloud.adoc
@@ -5,7 +5,7 @@ When you have your {productname} Server set up, you are ready to start registeri
 
 == Add Products And Sync Repositories
 
-Ensure you have already added the correponding products for your clients and xref:installation-and-upgrade:pubcloud-setup.adoc#add-product-sync-repo[synced the repositories] to {productname}. This is required to create the bootstrap repositories for bootstrapping the clients.
+Ensure you have already added the correponding products for your clients and xref:installation-and-upgrade:pubcloud-setup.adoc#add-product-sync-repo[synced the repositories] to {productname}. This is required to create the bootstrap repositories used for registering clients.
 
 == Prepare on-demand images
 
