--- a/modules/installation-and-upgrade/pages/installation-and-upgrade-overview.adoc
+++ b/modules/installation-and-upgrade/pages/installation-and-upgrade-overview.adoc
@@ -4,7 +4,7 @@
 **Updated:** {docdate}
 
 This book provides guidance on installing and upgrading {productname} Server and Proxy.
-It is split into the following sections:
+It is split into four sections:
 
 * Requirements: Describes the hardware, software, and networking requirements that you require before you begin.
 * Installation: Describes the process to install {productname} components.
