--- a/modules/installation-and-upgrade/pages/pubcloud-setup.adoc
+++ b/modules/installation-and-upgrade/pages/pubcloud-setup.adoc
@@ -108,7 +108,7 @@ When you have signed in to the administrator account for the first time, change 
 
 For more information about setting up your {productname} Server, see xref:installation-and-upgrade:server-setup.adoc[].
 
-[id="add-product-sync-repo"]
+[[add-product-sync-repo]]
 == Adding Products and Starting Repositories Synchronization
 
 Use the {productname} {webui} to add the required software products, and schedule a repository synchronization.
