Tidying up mentions of the Unified Installer.

--- a/modules/client-configuration/pages/autoinst-profiles.adoc
+++ b/modules/client-configuration/pages/autoinst-profiles.adoc
@@ -122,7 +122,7 @@ These are the most important sections in the {ay} installation file for installi
 
 * ``<general>$SNIPPET('spacewalk/sles_no_signature_checks')</general>` disables signature checks
 
-* ``<software>`` allows to specify product for the Unified Installer
+* ``<software>`` allows to specify product for the {unifiedinstaller}
 +
   See https://doc.opensuse.org/projects/autoyast/#CreateProfile-Software with a "<software>" example
 
