--- a/modules/client-configuration/pages/client-upgrades-major.adoc
+++ b/modules/client-configuration/pages/client-upgrades-major.adoc
@@ -52,7 +52,7 @@ umount /mnt
 
 [NOTE]
 ====
-This image is the unified installer and can be used for multiple autoinstallable distributions.
+This image is the {unifiedinstaller} and can be used for multiple autoinstallable distributions.
 ====
 
 
