--- a/modules/installation-and-upgrade/pages/install-server-unified.adoc
+++ b/modules/installation-and-upgrade/pages/install-server-unified.adoc
@@ -11,7 +11,7 @@ Before installing {susemgr}, ensure your physical or virtual machine has enough 
 
 [NOTE]
 ====
-* The recommended way of installing {susemgr} is from the {sle} installation media with the Unified Installer.
+* The recommended way of installing {susemgr} is from the {sle} installation media with the {unifiedinstaller}.
 * In case of installing {susemgr} in a public cloud where {susemgr} image is available, use that image. 
     For more information, see xref:specialized-guides:qs-publiccloud/overview.adoc[].
 * In case of installing {susemgr} in a public cloud where a {susemgr} image is not available, it is possible to start from a {sles}{nbsp}{sles-version}{nbsp}{sp-version} and switch the base product to {susemgr}{nbsp}{productnumber}.
@@ -25,7 +25,7 @@ Before installing {susemgr}, ensure your physical or virtual machine has enough 
 .Procedure: Installing {susemgr} Server from a DVD Image
 [role=procedure]
 
-. Boot your system with the Unified Installer.
+. Boot your system with the {unifiedinstaller}.
     If booting fails you might need to adjust the boot order in the BIOS.
 . When prompted, select [guimenu]``Installation``.
 . In the [guimenu]``Language, Keyboard and Product Selection`` screen, check [guimenu]``SUSE Manager Server``, and click btn:[Next].
