--- a/modules/installation-and-upgrade/pages/install-proxy-unified.adoc
+++ b/modules/installation-and-upgrade/pages/install-proxy-unified.adoc
@@ -29,9 +29,9 @@ The primary goal of a {susemgrproxy} is to improve {productname} performance by 
 
 
 [[proc-install-proxy-unifiedinstaller]]
-.Procedure: Installing {susemgr} Proxy with the Unified Installer
+.Procedure: Installing {susemgr} Proxy with the {unifiedinstaller}
 
-. To boot the Unified Installer from the installation image, you might need to adjust the boot order in the BIOS.
+. To boot the {unifiedinstaller} from the installation image, you might need to adjust the boot order in the BIOS.
 . When prompted, select [guimenu]``Installation``.
 // +
 // image::unifiedinstaller-install.png[scaledwidth=80%] (this image is with server selected.
