Unified formatting of the localhost variable when used in text.

--- a/modules/installation-and-upgrade/pages/ports.adoc
+++ b/modules/installation-and-upgrade/pages/ports.adoc
@@ -62,7 +62,7 @@ Port 80 is not used to serve the {webui}.
 == Internal Server Ports
 
 Internal port are used internally by the {productname} Server.
-Internal ports are only accessible from ``localhost``.
+Internal ports are only accessible from [literal]``localhost``.
 
 In most cases, you will not need to adjust these ports.
 
@@ -83,6 +83,7 @@ In most cases, you will not need to adjust these ports.
 Port 32768 and higher are used as ephemeral ports.
 These are most often used to receive TCP connections.
 When a TCP connection request is received, the sender will choose one of these ephemeral port numbers to match the destination port.
+
 You can use this command to find out which ports are ephemeral ports:
 
 ----
