--- a/modules/client-configuration/pages/clients-pubcloud.adoc
+++ b/modules/client-configuration/pages/clients-pubcloud.adoc
@@ -3,7 +3,9 @@
 
 When you have your {productname} Server set up, you are ready to start registering clients.
 
+== Add Products and Synchronize Repositories
 
+Ensure you have already added the corresponding products for your clients and xref:installation-and-upgrade/pubcloud-setup.adoc#add-product-sync-repo[synced the repositories] to {productname}. This is required to create the bootstrap repositories used for registering clients.
 
 == Prepare on-demand images
 
