--- a/modules/specialized-guides/pages/salt/salt-formula-monitoring.adoc
+++ b/modules/specialized-guides/pages/salt/salt-formula-monitoring.adoc
@@ -141,7 +141,9 @@ This is a basic example demonstrating the usage:
 ]
 ----
 
-For more information, see https://prometheus.io/docs/prometheus/latest/configuration/configuration/#file_sd_config.
+For more information, see https://prometheus.io/docs/guides/file-sd/.
+
+
 
 === TLS certificates and keys
 
