--- a/modules/installation-and-upgrade/pages/proxy-uyuni.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-uyuni.adoc
@@ -35,8 +35,6 @@ uyuni-proxy-stable-leap-154
 
 == Upgrade the Proxy
 
-To upgrade a proxy you first stop the proxy service, then you replace the software repositories and update the software, and finally you restart the proxy service.
-
 
 .Procedure: Updating the {productname} Proxy
 
@@ -49,12 +47,6 @@ With a system profile specific activation key, this system can be re-registered 
 Key: 	  re-1-1008b9843d44dac77f0a856f207cc2c6
 ////
 
-. On the {productname} Proxy, stop the proxy service:
-+
-----
-spacewalk-proxy stop
-----
-
 . In the {productname} Server {webui}, navigate to menu:Systems[Proxy] and click the name of the proxy.
 . Click menu:Software[Software Channels], and as the base channel select the openSUSE Leap {opensuse-version} channel that is listed in the [systemitem]``Customs Channels`` list.
 . In the [guimenu]``Child Channels`` pane, select the {opensuse-version} child channels.
@@ -64,17 +56,10 @@ spacewalk-proxy stop
 At least not for the migration from 15.2 to 153.
 . Click menu:Software[Packages > Upgrade], and select all the packages to be updated on the proxy, and then apply the selection.
 ////
-. Click menu:Details[Remote Command], add `zypper dup --allow-vendor-change` to the script field, and click btn:[Schedule]
+. Click menu:Details[Remote Command], add `zypper --non-interactive dup --allow-vendor-change --replacefiles` to the script field, and click btn:[Schedule]
 . Wait until the remote command is executed.
-. Re-register with the reactivation key using the [command]``rhnreg_ks`` command-line utility.
-  The system is re-registered with the same ID, history, and groups.
+. If required, Re-register with the reactivation key. The system is re-registered with the same ID, history, and groups.
 +
-// and channels (unless the system's base channel changes).
-. On the {productname} Proxy, start the proxy service:
-+
-----
-spacewalk-proxy start
-----
 
 If you need to update many proxies, you can create an action chain of this command sequence on the {productname} Server.
 You can use the action chain to perform updates on multiple proxies at the same time.
