Unified formatting of the localhost variable when used in text (#1583)
* Unified formatting of the localhost variable when used in text.

* Update modules/specialized-guides/pages/large-deployments/hub-reporting.adoc

Co-authored-by: Karl Eichwalder <ke@suse.de>

Co-authored-by: Karl Eichwalder <ke@suse.de>

--- a/modules/specialized-guides/pages/large-deployments/hub-reporting.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-reporting.adoc
@@ -57,7 +57,7 @@ The schema exports the most important tables from the main {productname} Databas
 Ready-to-use reports are provided as views, aggregating data over multiple tables.
 
 Every table gets an extra id column (`mgm_id`) specifying the {productname} server which provided the data. 
-On a single {productname} Server this column has the standard value `1` which represent "localhost." 
+On a single {productname} Server this column has the standard value `1` which represent [literal]``localhost``. 
 On the {productname} Hub it is replaced with the real server id the managed server has in the hub database.
 
 Another common additional field is `synced_date`, which represents the time when the data were exported from the main {productname} Server database.
