re-add spacewalk-proxy stop/start

--- a/modules/installation-and-upgrade/pages/proxy-uyuni.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-uyuni.adoc
@@ -35,6 +35,8 @@ uyuni-proxy-stable-leap-154
 
 == Upgrade the Proxy
 
+To upgrade a proxy you first stop the proxy service, then you replace the software repositories and update the software, and finally you restart the proxy service.
+
 
 .Procedure: Updating the {productname} Proxy
 
@@ -46,6 +48,12 @@ uyuni-proxy-stable-leap-154
 With a system profile specific activation key, this system can be re-registered using the 'rhnreg_ks' command-line utility. The system will be re-registered with the same id, history, groups, and channels (unless the system's base channel changes).
 Key: 	  re-1-1008b9843d44dac77f0a856f207cc2c6
 ////
+
+. On the {productname} Proxy, stop the proxy service:
++
+----
+spacewalk-proxy stop
+----
 
 . In the {productname} Server {webui}, navigate to menu:Systems[Proxy] and click the name of the proxy.
 . Click menu:Software[Software Channels], and as the base channel select the openSUSE Leap {opensuse-version} channel that is listed in the [systemitem]``Customs Channels`` list.
@@ -60,6 +68,12 @@ At least not for the migration from 15.2 to 153.
 . Wait until the remote command is executed.
 . If required, Re-register with the reactivation key. The system is re-registered with the same ID, history, and groups.
 +
+// and channels (unless the system's base channel changes).
+. On the {productname} Proxy, start the proxy service:
++
+----
+spacewalk-proxy start
+----
 
 If you need to update many proxies, you can create an action chain of this command sequence on the {productname} Server.
 You can use the action chain to perform updates on multiple proxies at the same time.
