re-add proxy reactivation part (takle in another PR)

--- a/modules/installation-and-upgrade/pages/proxy-uyuni.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-uyuni.adoc
@@ -66,7 +66,8 @@ At least not for the migration from 15.2 to 153.
 ////
 . Click menu:Details[Remote Command], add `zypper --non-interactive dup --allow-vendor-change --replacefiles` to the script field, and click btn:[Schedule]
 . Wait until the remote command is executed.
-. If required, Re-register with the reactivation key. The system is re-registered with the same ID, history, and groups.
+. Re-register with the reactivation key using the [command]``rhnreg_ks`` command-line utility.
+  The system is re-registered with the same ID, history, and groups.
 +
 // and channels (unless the system's base channel changes).
 . On the {productname} Proxy, start the proxy service:
