--- a/l10n-weblate/client-configuration/ko.po
+++ b/l10n-weblate/client-configuration/ko.po
@@ -1380,7 +1380,7 @@ msgid ""
 "With Cobbler]."
 msgstr ""
 "해당 이동식 매체를 준비하기 위한 한 가지 옵션은 Cobbler를 사용하는 것입니"
-"다.  Cobbler를 사용한 ISO 이미지 준비에 대한 설명은 xref:client- "
+"다.  Cobbler를 사용한 ISO 이미지 준비에 대한 설명은 xref:client-"
 "configuration:autoinst-cdrom.adoc#build-iso-with-cobbler[Cobbler를 사용한 "
 "ISO 이미지 빌드]를 참조하십시오."
 
@@ -1407,7 +1407,7 @@ msgid ""
 "configuration:autoinst-cdrom.adoc#build-iso-with-mkisofs[Build a RedHat ISO "
 "Image With mkisofs]."
 msgstr ""
-"{redhat} 시스템의 경우 ``mkisofs``를 사용합니다.  관련 정보는 xref:client- "
+"{redhat} 시스템의 경우 ``mkisofs``를 사용합니다.  관련 정보는 xref:client-"
 "configuration:autoinst-cdrom.adoc#build-iso-with-mkisofs[mkisofs를 사용한 "
 "RedHat ISO 이미지 빌드]를 참조하십시오."
 
@@ -1450,9 +1450,9 @@ msgid ""
 msgstr ""
 "Cobbler를 사용하여 ISO 이미지를 준비하려면 PXE를 통한 네트워크 부팅을 사용하"
 "는 것과 유사하게 배포 및 프로파일을 준비해야 합니다.  배포판 생성에 대한 설명"
-"은 xref:client-configuration :autoinst-distributions.adoc[자동 설치 가능한 배"
+"은 xref:client-configuration:autoinst-distributions.adoc[자동 설치 가능한 배"
 "포판]을 참조하십시오.  프로파일 생성에 대한 설명은 xref:client-configuration:"
-"autoinst- profiles.adoc[자동 설치 프로파일]을 참조하십시오."
+"autoinst-profiles.adoc[자동 설치 프로파일]을 참조하십시오."
 
 #. type: Plain text
 #: modules/client-configuration/pages/autoinst-cdrom.adoc:12
@@ -1737,7 +1737,7 @@ msgid ""
 "adoc#based-on-rpm-package[Distribution Based on a RPM Package]."
 msgstr ""
 "또는 [package]``tftpboot-installation`` 패키지를 설치할 수 있습니다.   관련 "
-"정보는 xref:client-configuration:autoinst-distributions.adoc #based-on-rpm-"
+"정보는 xref:client-configuration:autoinst-distributions.adoc#based-on-rpm-"
 "package[RPM 패키지 기반 배포]를 참조하십시오."
 
 #. type: Plain text
@@ -1761,7 +1761,7 @@ msgid ""
 msgstr ""
 "파일이 준비되고 기본 채널이 동기화되면 배포를 선언해야 합니다.  이 작업은 기"
 "본 채널에 설치 파일을 연결합니다.  배포는 1개 이상의 설치 프로파일에 의해 참"
-"조될 수 있습니다.  관련 정보는 xref:client-configuration :autoinst-"
+"조될 수 있습니다.  관련 정보는 xref:client-configuration:autoinst-"
 "distributions.adoc#declare-distribution[자동 설치 가능 배포판 선언]을 참조하"
 "십시오."
 
@@ -2000,7 +2000,7 @@ msgid ""
 msgstr ""
 "패키지 리포지토리에는 서명되지 않을 수 있는 메타데이터가 포함되어 있습니다.  "
 "메타데이터가 서명되지 않은 경우 [option]``insecure=1``을 [guimenu]``커널 옵션"
-"`` 필드에 추가하거나 xref:client- configuration:autoinst-owngpgkey.adoc[자체 "
+"`` 필드에 추가하거나 xref:client-configuration:autoinst-owngpgkey.adoc[자체 "
 "GPG 키 사용]에서의 설명과 같이 자체 GPG 키를 사용합니다."
 
 #. type: Plain text
@@ -2113,7 +2113,7 @@ msgid ""
 "For information about the in-place installation method, see xref:client-"
 "configuration:autoinst-reinstall.adoc[Reinstall Registered Systems]."
 msgstr ""
-"현재 위치 설치 방법은 xref:client- configuration:autoinst-reinstall.adoc[등록"
+"현재 위치 설치 방법은 xref:client-configuration:autoinst-reinstall.adoc[등록"
 "된 시스템 재설치]를 참조하십시오."
 
 #. type: Plain text
@@ -2156,7 +2156,7 @@ msgid ""
 "For information about the network boot method, see xref:client-configuration:"
 "autoinst-pxeboot.adoc[Install via the Network]."
 msgstr ""
-"네트워크 부팅 방법은 xref:client-configuration :autoinst-pxeboot.adoc[네트워"
+"네트워크 부팅 방법은 xref:client-configuration:autoinst-pxeboot.adoc[네트워"
 "크를 통한 설치]를 참조하십시오."
 
 #. type: Plain text
@@ -2176,7 +2176,7 @@ msgid ""
 "For information about the removable media method, see xref:client-"
 "configuration:autoinst-cdrom.adoc[Install via a CD-ROM or a USB key]."
 msgstr ""
-"이동식 미디어 방법은 xref:client- configuration:autoinst-cdrom.adoc[CD-ROM 또"
+"이동식 미디어 방법은 xref:client-configuration:autoinst-cdrom.adoc[CD-ROM 또"
 "는 USB 키를 사용한 설치]를 참조하십시오."
 
 #. type: Plain text
@@ -2185,7 +2185,7 @@ msgid ""
 "For information about the {productname} {smr} approach, see xref:retail:"
 "retail-overview.adoc[Retail Guide]."
 msgstr ""
-"{productname} {smr} 방법은 xref:retail :retail-overview.adoc[리테일 가이드]"
+"{productname} {smr} 방법은 xref:retail:retail-overview.adoc[리테일 가이드]"
 "를 참조하십시오."
 
 #. type: delimited block =
@@ -2482,7 +2482,7 @@ msgid ""
 "For information about how to declare profiles, see xref:client-configuration:"
 "autoinst-profiles.adoc#declare-profile[Declare the Profile]"
 msgstr ""
-"프로파일을 선언하는 방법은 xref:client-configuration :autoinst-profiles."
+"프로파일을 선언하는 방법은 xref:client-configuration:autoinst-profiles."
 "adoc#declare-profile[프로파일 선언]을 참조하십시오."
 
 #. type: Plain text
@@ -2491,7 +2491,7 @@ msgid ""
 "For information about {ay} profiles, see xref:client-configuration:autoinst-"
 "profiles.adoc#autoyast[AutoYast Profiles]."
 msgstr ""
-"{ay} 프로파일에 대한 설명은 xref:client-configuration:autoinst- profiles."
+"{ay} 프로파일에 대한 설명은 xref:client-configuration:autoinst-profiles."
 "adoc#autoyast[AutoYaST 프로파일]을 참조하십시오."
 
 #. type: Plain text
@@ -2500,7 +2500,7 @@ msgid ""
 "For information about {kickstart} profiles, see xref:client-configuration:"
 "autoinst-profiles.adoc#kickstart[Kickstart Profiles]."
 msgstr ""
-"{kickstart} 프로파일에 대한 설명은 xref:client-configuration :autoinst-"
+"{kickstart} 프로파일에 대한 설명은 xref:client-configuration:autoinst-"
 "profiles.adoc#kickstart[Kickstart 프로파일]을 참조하십시오."
 
 #. type: Plain text
@@ -3406,7 +3406,7 @@ msgid ""
 "adoc#prepare-the-dhcp-server[Prepare the DHCP Server]."
 msgstr ""
 "DHCP 서버를 준비합니다. 관련 내용은 xref:client-configuration:autoinst-"
-"pxeboot.adoc #prepare-the-dhcp-server[DHCP 서버 준비]를 참조하십시오."
+"pxeboot.adoc#prepare-the-dhcp-server[DHCP 서버 준비]를 참조하십시오."
 
 #. type: Plain text
 #: modules/client-configuration/pages/autoinst-pxeboot.adoc:19
@@ -3414,7 +3414,7 @@ msgid ""
 "Prepare an autoinstallable distribution, see xref:client-configuration:"
 "autoinst-distributions.adoc[Autoinstallable Distributions]."
 msgstr ""
-"자동 설치 가능한 배포판을 준비합니다. 관련 내용은 xref:client-configuration :"
+"자동 설치 가능한 배포판을 준비합니다. 관련 내용은 xref:client-configuration:"
 "autoinst-distributions.adoc[자동 설치 가능한 배포판]을 참조하십시오."
 
 #. type: Plain text
@@ -3424,7 +3424,7 @@ msgid ""
 "profiles.adoc[Autoinstallation Profiles]."
 msgstr ""
 "자동 설치 프로파일을 준비합니다. 관련 내용은 xref:client-configuration:"
-"autoinst- profiles.adoc[자동 설치 프로파일]을 참조하십시오."
+"autoinst-profiles.adoc[자동 설치 프로파일]을 참조하십시오."
 
 #. type: Plain text
 #: modules/client-configuration/pages/autoinst-pxeboot.adoc:21
@@ -3441,7 +3441,7 @@ msgid ""
 "adoc[Unattended Provisioning]."
 msgstr ""
 "일부 다른 단계는 선택 사항입니다. 프록시를 설치 서버로 사용하려면 xref:"
-"client-configuration:autoinst-pxeboot.adoc#synchronize-the-tftp- tree-with-"
+"client-configuration:autoinst-pxeboot.adoc#synchronize-the-tftp-tree-with-"
 "proxies[프록시와 TFTP 트리 동기화]를 참조하십시오. 무인 프로비저닝에 대한 설"
 "명은 xref:client-configuration:autoinst-unattended.adoc[무인 프로비저닝]을 참"
 "조하십시오."
@@ -3726,7 +3726,7 @@ msgstr ""
 "등록된 클라이언트를 현재 위치에 다시 설치하려면 자동 설치 가능한 배포판 및 자"
 "동 설치 프로파일을 정의해야 합니다.  관련 정보는 xref:client-configuration:"
 "autoinst-distributions.adoc[ 자동 설치 가능한 배포판] 및 xref:client-"
-"configuration:autoinst- profiles.adoc[자동 설치 프로파일]을 참조하십시오."
+"configuration:autoinst-profiles.adoc[자동 설치 프로파일]을 참조하십시오."
 
 #. type: Plain text
 #: modules/client-configuration/pages/autoinst-reinstall.adoc:4
@@ -16956,11 +16956,11 @@ msgid ""
 "Do not register the {productname} Server to itself.  The {productname} "
 "Server must be managed individually or by using another separate "
 "{productname} Server.  For more information about using multiple servers, "
-"see xref:specialized-guides:large-deployments/multi-server.adoc[]."
+"see xref:specialized-guides:large-deployments:multi-server.adoc[]."
 msgstr ""
 "{productname} 서버를 재귀 등록하지 마십시오. {productname} 서버는 개별 관리하거나 별도의 다른 "
 "{productname} 서버를 사용하여 관리해야 합니다. 여러 서버 사용에 대한 자세한 내용은 xref:specialized-guides"
-":large-deployments:/multi-server.adoc[]에서 참조하십시오."
+":large-deployments:multi-server.adoc[]에서 참조하십시오."
 
 #. type: Title =
 #: modules/client-configuration/pages/registration-overview-alibaba.adoc:1
@@ -17107,11 +17107,11 @@ msgid ""
 "Do not register a {productname} Server to itself.  The {productname} Server "
 "must be managed individually or by using another separate {productname} "
 "Server.  For more information about using multiple servers, see xref:"
-"specialized-guides:large-deployments/multi-server.adoc[]."
+"specialized-guides:large-deployments:multi-server.adoc[]."
 msgstr ""
 "{productname} 서버를 이 서버 자체에 등록하지 마십시오.  {productname} 서버는 개별적으로 또는 별도의 "
 "{productname} 서버를 사용해 관리해야 합니다.  여러 서버를 사용하는 방법에 대한 자세한 내용은 xref:specialized-"
-"guides:large-deployments/multi-server.adoc[]에서 참조하십시오."
+"guides:large-deployments:multi-server.adoc[]에서 참조하십시오."
 
 #. type: Title =
 #: modules/client-configuration/pages/registration-overview-oracle.adoc:1
