--- a/l10n-weblate/installation-and-upgrade/ko.po
+++ b/l10n-weblate/installation-and-upgrade/ko.po
@@ -6684,7 +6684,7 @@ msgid ""
 "Continue with setting up the registered {productname} Proxy: xref:proxy-"
 "setup.adoc[]."
 msgstr ""
-"등록한 {productname} 프록시 설정을 계속합니다. 프록시: xref:installation:"
+"등록한 {productname} 프록시 설정을 계속합니다. 프록시: xref:installation-and-upgrade:"
 "proxy-setup.adoc[]."
 
 #. type: Title =
@@ -8815,11 +8815,11 @@ msgid ""
 "Do not register the {productname} Server to itself.  The {productname} "
 "Server must be managed individually or by using another separate "
 "{productname} Server.  For more information about using multiple servers, "
-"see xref:specialized-guides:large-deployments/multi-server.adoc[]."
+"see xref:specialized-guides:large-deployments:multi-server.adoc[]."
 msgstr ""
 "{productname} 서버를 재귀 등록하지 마십시오. {productname} 서버는 개별 관리하거나 별도의 다른 "
 "{productname} 서버를 사용하여 관리해야 합니다. 여러 서버 사용에 대한 자세한 내용은 xref:specialized-guides"
-":large-deployments:/multi-server.adoc[]에서 참조하십시오."
+":large-deployments::multi-server.adoc[]에서 참조하십시오."
 
 #. type: Title ==
 #: modules/installation-and-upgrade/pages/server-setup.adoc:10
