enhance HSTS troubleshooting note (per feedback) (#1601)
The trouble may occur if the user enabled HSTS.
https://github.com/uyuni-project/uyuni-docs/pull/1577

--- a/modules/installation/pages/server-setup.adoc
+++ b/modules/installation/pages/server-setup.adoc
@@ -79,9 +79,9 @@ For security it is recommended that the main administrator creates _low level ad
 
 [NOTE]
 ====
-Newer browser versions can block web access to the {productname} Server FQDN because of HSTS.
+Newer browser versions can block web access to the {productname} Server FQDN in case the user enabled HSTS.
 
-Installing the CA certificate from the [path]``pub`` directory via HTTP and importing it to the browser will allow access to the server.
+Installing the CA certificate from the [path]``pub`` directory via HTTP and importing it to the browser will then allow access to the server:
 
 . On the server, go to http://<server>.example.com/pub/RHN-ORG-TRUSTED-SSL-CERT.
 
