--- a/modules/client-configuration/pages/clients-rh-rhui.adoc
+++ b/modules/client-configuration/pages/clients-rh-rhui.adoc
@@ -67,11 +67,41 @@ The key has a file extension of [path]``.key``.
 
 
 .Procedure: Copying Certificates to the Server
-. Copy your entitlement certificate and key from the client system, to a location that the {productname} Server can access. Amazon EC2:
+. Copy your entitlement certificate and key from the client system, to a location that the {productname} Server can access:
++
+Amazon EC2:
 +
 ----
 cp /etc/pki/rhui/product/content-<version>.crt /<example>/entitlement/
 cp /etc/pki/rhui/content-<version>.key /<example>/entitlement/
+----
++
+Azure:
++
+* Check the certificate chain using the command:
+----
+openssl s_client -connect rhui-1.microsoft.com:443 -showcerts
+----
++
+A sample output will look like the following:
++
+----
+CONNECTED(00000003)
+depth=2 C = US, O = DigiCert Inc, OU = www.digicert.com, CN = DigiCert Global Root G2
+verify return:1
+depth=1 C = US, O = Microsoft Corporation, CN = Microsoft Azure TLS Issuing CA 06
+verify return:1
+depth=0 C = US, ST = WA, L = Redmond, O = Microsoft Corporation, CN = rhui-1.microsoft.com
+verify return+
+----
+* Check the second certificate ([literal]``CN = Microsoft Azure``), if it is the same on your VM, note the certificate name.
+Refer to the https://docs.microsoft.com/en-us/azure/active-directory/fundamentals/certificate-authorities to download the certificate.
+Click the AIA link to download the certificate.
+The certificate will be downloaded with the [literal]``.cer`` suffix.
+Convert it to [literal]``.crt`` with the command:
++
+----
+openssl x509 -inform DER -in <example.cer> -out <example.crt>
 ----
 +
 Google Cloud Platform:
@@ -88,6 +118,10 @@ Amazon EC2:
 ----
 cp /etc/pki/rhui/cdn.redhat.com-chain.crt /<example>/entitlement
 ----
++
+Azure:
++
+Upload the converted certifcate to /<example>/entitlement
 +
 Google Cloud Platform:
 +
