add sync note https://github.com/uyuni-project/uyuni-docs/issues/1584

--- a/modules/administration/pages/custom-channels.adoc
+++ b/modules/administration/pages/custom-channels.adoc
@@ -185,8 +185,12 @@ For each pair of ``suite`` and ``component`` the spezification defines a distinc
 . Assign your new repository to your custom channel by navigating to menu:Software[Manage > Channels], clicking the name of your newly created custom channel, and navigating to the [guimenu]``Repositories`` tab.
 . Ensure the repository you want to assign to the channel is checked, and click btn:[Update Repositories].
 . Navigate to the [guimenu]``Sync`` tab and click btn:[Sync Now] to synchronize immediately.
-    You can also set an automated synchronization schedule on this tab.
 
+[NOTE]
+====
+You can also set an automated synchronization schedule on this [guimenu]``Repositories`` tab.
+To avoid missing importants updates {suse} recommends to configure a [guimenu]``Schedule`` to syncronize regularly.
+====
 
 There are several ways to check if a channel has finished synchronizing:
 
