--- a/modules/administration/pages/custom-channels.adoc
+++ b/modules/administration/pages/custom-channels.adoc
@@ -189,7 +189,7 @@ For each pair of ``suite`` and ``component`` the spezification defines a distinc
 [NOTE]
 ====
 You can also set an automated synchronization schedule on this [guimenu]``Repositories`` tab.
-To avoid missing importants updates {suse} recommends to configure a [guimenu]``Schedule`` to syncronize regularly.
+To avoid missing important updates {suse} recommends to configure a [guimenu]``Schedule`` to synchronize regularly.
 ====
 
 There are several ways to check if a channel has finished synchronizing:
