--- a/modules/installation-and-upgrade/pages/uyuni-install-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/uyuni-install-requirements.adoc
@@ -1,7 +1,7 @@
 [[uyuni-install-requirements]]
 = Requirements
 
-The following tables specifys the minimum server and proxy requirements.
+The following tables specify the minimum server and proxy requirements.
 // In this table, replace ``version`` with the version of the product you are using.
 
 
